[package]
name = "quantum_log_examples"
version = "0.3.2"
edition = "2021"
authors = ["QuantumLog Team"]
description = "Examples and test cases for QuantumLog"
license = "MIT OR Apache-2.0"

[dependencies]
quantum_log = { path = ".." }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
csv = "1.3"
influxdb = { version = "0.7", optional = true }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
rand = "0.8"

[features]
default = []
database = ["influxdb"]
mpi_support = []
tls = []

# 每个示例都是一个独立的二进制文件，按sink类型组织
[[bin]]
name = "basic_usage"
path = "console_sink/basic_usage.rs"

[[bin]]
name = "complete_examples"
path = "file_sink/complete_examples.rs"

[[bin]]
name = "config_file_example"
path = "config/config_file_example.rs"

[[bin]]
name = "csv_sink_example"
path = "csv_sink/csv_sink_example.rs"

[[bin]]
name = "influxdb_example"
path = "influxdb_sink/influxdb_example.rs"

# influxdb_integration.rs is a test file, not a binary

[[bin]]
name = "security_demo"
path = "security/security_demo.rs"

[[bin]]
name = "sink_trait_usage"
path = "trait_usage/sink_trait_usage.rs"

[[bin]]
name = "tls_network_example"
path = "network_sink/tls_network_example.rs"

[[bin]]
name = "test_examples"
path = "test_examples.rs"